# frostline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frostline/: cli.py  config.py  executor.py
frostline/analyzer/: query.py
frostline/connectors/: postgres.py  snowflake.py
frostline/loader/: yelp.py
frostline/orchestrator/: dag.py  runner.py
frostline/pipeline/: runner.py  tasks.py
frostline/router/: cost_estimator.py  feedback.py  warehouse.py
pipelines/: example.yml
sql/postgres/: 01_create_metadata_schema.sql
sql/snowflake/: 01_create_database.sql  02_create_raw_tables.sql  03_create_streams.sql  04_create_stream_task.sql
workflows/: example.yml
